[package]
name = "opentelemetry-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = { version = "0.8.5", features = ["std", "std_rng", "small_rng"] }
hyper = { version = "1.3.1" }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
opentelemetry-jaeger-propagator = "0.2.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "span_creation"
harness = false # This tells Cargo to not use the default test harness and allows Criterion to control the execution of benchmarks.

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"